[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://TitleScreen.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="ButtonStyle"]
bg_color = Color(0.2, 0.1, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.6, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.04, 0.25, 1)

[node name="Stars" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Star1" type="ColorRect" parent="Stars"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = -196.0
offset_bottom = -146.0
color = Color(1, 1, 0.8, 0.9)

[node name="Star2" type="ColorRect" parent="Stars"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = -120.0
offset_right = 184.0
offset_bottom = -116.0
color = Color(0.9, 0.9, 1, 0.8)

[node name="Star3" type="ColorRect" parent="Stars"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = -96.0
offset_bottom = 84.0
color = Color(1, 0.9, 0.9, 0.7)

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 2
text = "LIGHTBEARER\nRISE OF THE EMBER"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Spacer1" type="Control" parent="MainMenu"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_styles/normal = SubResource("ButtonStyle")
text = "PLAY GAME"

[node name="SettingsButton" type="Button" parent="MainMenu"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_styles/normal = SubResource("ButtonStyle")
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_styles/normal = SubResource("ButtonStyle")
text = "QUIT GAME"

[node name="SettingsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SettingsBackground" type="ColorRect" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="SettingsPanel" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="SettingsTitle" type="Label" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ResolutionLabel" type="Label" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2
text = "Resolution:"
horizontal_alignment = 1

[node name="ResolutionOptions" type="VBoxContainer" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2

[node name="Resolution1" type="Button" parent="SettingsMenu/SettingsPanel/ResolutionOptions"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "1920x1080 (Full HD)"

[node name="Resolution2" type="Button" parent="SettingsMenu/SettingsPanel/ResolutionOptions"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "1366x768 (HD)"

[node name="Resolution3" type="Button" parent="SettingsMenu/SettingsPanel/ResolutionOptions"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "1280x720 (HD Ready)"

[node name="Resolution4" type="Button" parent="SettingsMenu/SettingsPanel/ResolutionOptions"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "1152x648 (16:9 Compact)"

[node name="Resolution5" type="Button" parent="SettingsMenu/SettingsPanel/ResolutionOptions"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "1024x576 (Smaller 16:9)"

[node name="FullscreenButton" type="Button" parent="SettingsMenu/SettingsPanel/ResolutionOptions"]
layout_mode = 2
theme_override_styles/normal = SubResource("ButtonStyle")
text = "FULLSCREEN"

[node name="Spacer3" type="Control" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="BackButton" type="Button" parent="SettingsMenu/SettingsPanel"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_styles/normal = SubResource("ButtonStyle")
text = "BACK TO MENU"